Fixed small CSS z-index issue

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -9,6 +9,8 @@
     position: fixed;
     right: 0;
     top: 0;
+
+    z-index: 10;
 }
 
 .site-title {
